Fix task card overlapping modal

--- a/src/components/TaskCard/index.scss
+++ b/src/components/TaskCard/index.scss
@@ -1,52 +1,14 @@
-.task-card-container {
+.task-card {
   display: grid;
-  width: 100%;
-  height: 20rem;
-  grid-template-rows: repeat(auto-fit, minmax(1rem, max-content));
-  @include BoxShadow(3);
-  &:hover {
-    @include BoxShadow(12)
+  grid-template-columns: minmax(0px, 2rem) 5fr 1fr;
+  padding: 1.6rem;
+  &-text {
+    margin-left: 2rem;
+    &-title {
+
+    }
+    &-subtitle {
+
+    }
   }
-}
-.task-card-content {
-  display: grid;
-  height: 100%;
-  grid-template-rows: repeat(auto-fit, minmax(0rem, max-content));
-  padding: 2rem 3rem 3rem 3rem;
-  grid-row-gap: 1.5rem;
-}
-
-.task-card-title {
-  display: block;
-  font-size: 1.6rem;
-  font-weight: 600;
-}
-
-.task-description {
-  font-size: 1.3rem;
-  color: $secondary-text;
-}
-
-.task-card-id {
-  padding: 1rem 3rem 1rem 3rem;
-  // background-color: $gray-900;
-  display: flex;
-  align-items: center;
-}
-
-.task-card-id-link {
-  margin-left: 1rem;
-  color: $gray-900;
-  text-decoration: none;
-  cursor: pointer;
-  font-size: 1.6rem;
-  font-weight: 400;
-}
-
-.task-card-date {
-  display: block;
-  align-self: end;
-  font-size: 1rem;
-  color: $secondary-text;
-  text-align: end;
 }
