--- a/src/screens/Dashboard/Tasks/index.scss
+++ b/src/screens/Dashboard/Tasks/index.scss
@@ -11,4 +11,7 @@
     justify-content: flex-end;
     margin-bottom: 2rem;
   }
+  &-list-item {
+    list-style: none;
+  }
 }
